resharper/resharper-unity/test/data/CSharp/Intentions/QuickFixes/InvalidSignature/ReorderParametersThreeParameters_213.cs
using UnityEngine;
using UnityEditor;

public class FooProcessor : AssetPostprocessor
{
    private void OnPostprocessGameObjectWithUserProperties({caret}string[] propNames, GameObject go, object[] values)
    {
    }
}